--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -43,3 +43,58 @@ nav ul li a:hover {
 main {
     padding: 20px;
 }
+
+.container {
+    padding: 20px;
+    text-align: center;
+}
+.button {
+    display: inline-block;
+    margin: 10px;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: white;
+    background-color: #007BFF;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+}
+.button:hover {
+    background-color: #0056b3;
+}
+.filter-container {
+    margin-top: 20px;
+    text-align: left;
+    max-width: 500px;
+    margin: 20px auto;
+}
+.filter-container label {
+    display: block;
+    margin: 10px 0 5px;
+}
+.filter-container input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+.table-container {
+    display: none; /* Initially hidden */
+    margin-top: 20px;
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px auto;
+    max-width: 1200px;
+}
+th, td {
+    border: 1px solid #ddd;
+    padding: 10px;
+    text-align: left;
+}
+th {
+    background-color: #f4f4f4;
+}
